# saldowsd-rs

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml  dist-workspace.toml  pyproject.toml  ruff.toml  zizmor.yml
.github/workflows/: build-binaries.yml  check.yml  publish-pypi.yml  release.yml  scheduled.yml  test.yml
crates/asp-server/: Cargo.toml  LICENSE
crates/asp-server/examples/: manual_test.sh  minimal_asp.rs
crates/asp-server/src/: lib.rs  msg.rs  req_queue.rs  stdio.rs
crates/asp-types/: Cargo.toml
crates/asp-types/src/: core.rs
crates/process-corpus/: Cargo.toml
crates/saldo/: Cargo.toml
crates/saldowsd/: Cargo.toml
crates/saldowsd/src/: cli.rs  config.rs  global_state.rs  lib.rs  main.rs  main_loop.rs  options.rs  version.rs
crates/saldowsd/src/asp/: capabilities.rs
crates/saldowsd/src/cli/: batch.rs  flags.rs
crates/stdx/: Cargo.toml
crates/stdx/src/: thread.rs
crates/stdx/src/thread/: intent.rs  pool.rs
crates/w2v/: Cargo.toml
crates/w2v/src/: error.rs  lib.rs  word2vec.rs
crates/wsd-application/: Cargo.toml
crates/wsd-application/src/: lib.rs  vector_wsd.rs  wsd_application.rs
crates/wsd-application/tests/api/: vector_wsd.rs
python/: ruff.toml
python/saldowsd/: __init__.py  __main__.py  _find_saldowsd.py
scripts/: transform_readme.py
