[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "saldowsd"
version = "0.2.2"
description = "Tool for word sense disambiguation (WSD) based on SALDO, ported to Rust."
authors = [{ name = "Språkbanken Text", email = "sb-info@svenska.gu.se" }]
requires-python = ">=3.10"
keywords = [
  "word sense disambiguation", "saldo"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
]
readme = "README.md"

[project.urls]
Homepage = "https://spraakbanken.gu.se"
Repository = "https://github.com/spraakbanken/saldowsd-rs"
Changelog = "https://github.com/spraakbanken/saldowsd-rs/blob/main/CHANGELOG.md"
Releases = "https://github.com/spraakbanken/saldowsd-rs/releases"

[tool.maturin]
bindings = "bin"
manifest-path = "crates/saldowsd/Cargo.toml"
module-name = "saldowsd"
python-source = "python"
strip = true
include = [
    { path = "rust-toolchain.toml", format = ["sdist", "wheel"] },
    { path = "LICENSE", format = "sdist" },
]

[tool.rooster]
changelog-contributors = false  # We exclude contributors from the CHANGELOG file
major-labels = []  # We do not use the major version number yet
minor-labels = ["breaking"]
ignore-labels = ["internal", "ci", "testing"]
version_files = [
  "README.md",
  "pyproject.toml",
  "crates/uv/Cargo.toml",
  "crates/uv-version/Cargo.toml",
  "crates/uv-build/Cargo.toml",
  "crates/uv-build/pyproject.toml",
  { target = "crates/uv-static/src/env_vars.rs", replace = "next release" },
  "docs/getting-started/installation.md",
  "docs/guides/integration/docker.md",
  "docs/guides/integration/pre-commit.md",
  "docs/guides/integration/github.md",
  "docs/guides/integration/aws-lambda.md",
  "docs/concepts/build-backend.md",
  "docs/concepts/projects/init.md",
  "docs/concepts/projects/workspaces.md",
  { target = "docs/reference/environment.md", replace = "next release" },
]

[tool.rooster.section-labels]
"Breaking changes" = ["breaking"]
"Enhancements" = ["enhancement", "compatibility", "error messages"]
"Preview features" = ["preview"]
"Configuration" = ["configuration"]
"Performance" = ["performance"]
"Bug fixes" = ["bug"]
"Rust API" = ["rustlib"]
"Documentation" = ["documentation"]
"Other changes" = ["__unknown__"]

[tool.mypy]
ignore_missing_imports = true
files = [
  "crates/uv-python/*.py",
  "python/uv/*.py",
]

[tool.uv]
managed = false
