
[package]
name = "asp-server"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
reposirory = { workspace = true }

[dependencies]
asp-types = { workspace = true }
crossbeam-channel = "0.5.15"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
env_logger = "0.11.8"
eyre = "0.6.12"

