
[package]
name = "asp-server"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
reposirory = { workspace = true }

[dependencies]
asp-types = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
eyre = { workspace = true }
