[package]
name = "asp-types"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
reposirory = { workspace = true }

[features]
default = ["proposed"]
proposed = []

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
