[package]
name = "saldowsd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = { workspace = true }

[dependencies]
# local deps
saldo = { workspace = true }
wsd-application = { workspace = true }
#
env_logger = { workspace = true }
hashbrown.workspace = true
log.workspace = true
thiserror.workspace = true
clap = { version = "4.5.48", features = ["cargo", "derive"] }
stdx.workspace = true
asp-server.workspace = true
asp-types.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
eyre.workspace = true
crossbeam-channel.workspace = true
tracing = "0.1.41"
