[package]
name = "wsd-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = { workspace = true }

[dependencies]
# local deps
process-corpus = { workspace = true }
saldo = { workspace = true }
w2v = { workspace = true }

# external deps
hashbrown.workspace = true
log.workspace = true
thiserror.workspace = true
ndarray.workspace = true
eyre.workspace = true

[dev-dependencies]
eyre.workspace = true
insta.workspace = true
rstest.workspace = true
